// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItemStyled> should render correctly in Classic 1`] = `
.c0 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-weight: 400;
  line-height: 24px;
  outline: none;
  padding: 2px 8px;
  box-sizing: border-box;
  list-style-position: inside;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #1C2025;
  cursor: pointer;
}

.c0:hover {
  background: undefined;
}

.c0:active {
  background: #F1F1F1;
  color: #0376DA;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0376DA;
}

<li
  className="c0"
/>
`;

exports[`<ListItemStyled> should render correctly in Novo 1`] = `
.c0 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.011rem;
  -moz-letter-spacing: -0.011rem;
  -ms-letter-spacing: -0.011rem;
  letter-spacing: -0.011rem;
  min-height: 40px;
  outline: none;
  padding: 8px 16px;
  box-sizing: border-box;
  list-style-position: inside;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #292929;
  cursor: pointer;
}

.c0:hover {
  background: #F1F1F1;
}

.c0:active {
  background: #E0E0E0;
  color: undefined;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0;
}

<li
  className="c0"
/>
`;

exports[`<ListItemStyled> should render correctly when item shouldWrapText 1`] = `
.c0 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-weight: 400;
  line-height: 24px;
  outline: none;
  padding: 2px 8px;
  box-sizing: border-box;
  list-style-position: inside;
  color: #1C2025;
  cursor: pointer;
}

.c0:hover {
  background: undefined;
}

.c0:active {
  background: #F1F1F1;
  color: #0376DA;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0376DA;
}

<li
  className="c0"
/>
`;
